# netcfgfx

./: .gitignore  CMakeLists.txt  README  config.h.in  index.html  settings  version.h
lib/: CMakeLists.txt  profile.cpp  profile.h  profiles.cpp  profiles.h  util.cpp  util.h
resources/: CMakeLists.txt  LICENSE  cr22-action-nm_stage01_connecting.mng  images.qrc  netcfgfx.qrc
src/: CMakeLists.txt  application.cpp  application.h  main.cpp  netcfgfx_network_scanner.cpp  netcfgfx_network_scanner.h  netcfgfx_network_scanner.ui  netcfgfx_notifier.cpp  netcfgfx_notifier.h  netcfgfx_options.cpp  netcfgfx_options.h  netcfgfx_options.ui  netcfgfx_profile.ui  netcfgfx_profile_editor.cpp  netcfgfx_profile_editor.h  netcfgfx_profile_editor.ui  netcfgfx_tray.cpp  netcfgfx_tray.h  notifier.cpp  notifier.h  profiledialog.cpp  profiledialog.h  profiles.ui
translations/: netcfgfx_de.qm  netcfgfx_de.ts
xml/: CMakeLists.txt
